# dokumentasi

./: CNAME  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ENTAHLAH.yml
docs/: index.en.md  index.md
docs/DVNM/: index.en.md  index.md
docs/IA-AI/: index.en.md  index.md
docs/Mode-Ororon/: index.en.md  index.md
docs/Seri-Gaming/: index.en.md  index.md
docs/Seri-Gaming/Bermain-Genshin-Impact/: index.en.md  index.md
docs/Seri-Gaming/Bermain-Honkai-Star-Rail/: index.en.md  index.md
uthabiti-kachina_theme/: 404.html  base.html  home.html
uthabiti-kachina_theme/__kachina/css/: css.css  imgrd.css
uthabiti-kachina_theme/__kachina/font/: RINMIKARU.eot
uthabiti-kachina_theme/__kachina/img/back/: README.MD
uthabiti-kachina_theme/__kachina/part/: head-tag.html  nav-aside-kachina.html  nav-main-menu.html  nav-main.html
uthabiti-kachina_theme/__kachina/scr/: this.js
