[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Uthabiti-Kachina-MkDocs-Theme"
version = "1446"
description = "Kachina Style MkDocs Theme"
readme = "README.md"
license = "Unknown"
authors = [
    {name = "M. N. A. Abyan", email = "abyanu@163.com"},
]
classifiers = [
    "Development Status :: Staging",
    "Environment :: Web Environment",
    "Framework :: MkDocs",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Unknown",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs >= 1.5",
]

[project.urls]
Source = "https://github.com/abyanmna/dokumentasi"

[project.entry-points."mkdocs.themes"]
kachinastyleTheme = "uthabiti-kachina_theme"

[tool.hatch.build]
include = ["/uthabiti-kachina_theme"]
